Compiler/y.output
Terminals unused in grammar

    tMot
    tComment
    tSpace
    tBackN
    tBackT
    tReturn
    ERROR


Grammar

    0 $accept: File $end

    1 $@1: %empty

    2 File: $@1 Fonctions

    3 Fonctions: %empty
    4          | Fonction Fonctions

    5 Fonction: FonctionMain
    6         | Type tVariable tPO Params tPF Body

    7 FonctionMain: Type tMAIN tPO Params tPF Body

    8 Params: %empty
    9       | Param SuiteParams

   10 Param: Type tVariable

   11 SuiteParams: %empty
   12            | tVirg Param SuiteParams

   13 $@2: %empty

   14 $@3: %empty

   15 $@4: %empty

   16 Body: $@2 tAO Declarations $@3 Instructions $@4 tAF

   17 Declarations: %empty
   18             | Declaration Declarations

   19 $@5: %empty

   20 Declaration: Type tVariable tPointVirg $@5

   21 $@6: %empty

   22 Declaration: Type tVariable $@6 SuiteVariables tPointVirg

   23 SuiteVariables: tVirg tVariable

   24 $@7: %empty

   25 SuiteVariables: tVirg tVariable $@7 SuiteVariables

   26 Instructions: %empty
   27             | Instruction Instructions

   28 Instruction: Affectation
   29            | IfInstruction
   30            | WhileInstruction
   31            | Print

   32 $@8: %empty

   33 $@9: %empty

   34 WhileInstruction: tWhile $@8 tPO Comparaison tPF $@9 Body

   35 Print: tPrintf tPO tVariable tPF tPointVirg

   36 IfInstruction: IfPattern

   37 $@10: %empty

   38 IfInstruction: IfPattern tElse $@10 Body

   39 $@11: %empty

   40 IfPattern: tIf tPO Comparaison tPF $@11 Body

   41 Comparaison: Expression tEQUALCOMPARISON Expression
   42            | Expression tDIFFERENT Expression
   43            | Expression tGREATER_THAN Expression
   44            | Expression tLESS_THAN_OR_EQUAL_TO Expression
   45            | Expression tLESS_THAN Expression
   46            | Expression tGREATER_THAN_OR_EQUAL_TO Expression
   47            | Expression

   48 $@12: %empty

   49 Affectation: tVariable tEqu Expression $@12 SuiteAffectations tPointVirg
   50            | tVariable tEqu Expression tPointVirg

   51 SuiteAffectations: tVirg tVariable tEqu Expression

   52 $@13: %empty

   53 SuiteAffectations: tVirg tVariable tEqu Expression $@13 SuiteAffectations

   54 Expression: tPO Expression tPF
   55           | Expression tPlus Expression
   56           | Expression tMinus Expression
   57           | Expression tMul Expression
   58           | Expression tDiv Expression
   59           | tMinus Expression
   60           | tVariable
   61           | Value
   62           | tEsper tVariable
   63           | tMul tVariable

   64 $@14: %empty

   65 Value: tNumber $@14

   66 $@15: %empty

   67 Value: tExpo $@15

   68 $@16: %empty

   69 Value: tDecimal $@16

   70 Type: CoreType
   71     | tConst CoreType

   72 CoreType: tInt PointerStars

   73 PointerStars: %empty
   74             | tMul PointerStars


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    tMAIN (258) 7
    tInt (259) 72
    tConst (260) 71
    tPlus (261) 55
    tMinus (262) 56 59
    tMul (263) 57 63 74
    tDiv (264) 58
    tEqu (265) 49 50 51 53
    tPO (266) 6 7 34 35 40 54
    tPF (267) 6 7 34 35 40 54
    tAO (268) 16
    tAF (269) 16
    tMot (270)
    tComment (271)
    tSpace (272)
    tBackN (273)
    tBackT (274)
    tVirg (275) 12 23 25 51 53
    tPointVirg (276) 20 22 35 49 50
    tEsper (277) 62
    tPrintf (278) 35
    tIf <nb> (279) 40
    tElse (280) 38
    tWhile <duo> (281) 34
    tReturn (282)
    tLESS_THAN_OR_EQUAL_TO (283) 44
    tLESS_THAN (284) 45
    tGREATER_THAN_OR_EQUAL_TO (285) 46
    tGREATER_THAN (286) 43
    tDIFFERENT (287) 42
    tEQUALCOMPARISON (288) 41
    tNumber <nb> (289) 65
    tDecimal <nb> (290) 69
    tExpo <nb> (291) 67
    tVariable <var> (292) 6 10 20 22 23 25 35 49 50 51 53 60 62 63
    ERROR (293)


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    File (40)
        on left: 2
        on right: 0
    $@1 (41)
        on left: 1
        on right: 2
    Fonctions (42)
        on left: 3 4
        on right: 2 4
    Fonction (43)
        on left: 5 6
        on right: 4
    FonctionMain (44)
        on left: 7
        on right: 5
    Params (45)
        on left: 8 9
        on right: 6 7
    Param (46)
        on left: 10
        on right: 9 12
    SuiteParams (47)
        on left: 11 12
        on right: 9 12
    Body (48)
        on left: 16
        on right: 6 7 34 38 40
    $@2 (49)
        on left: 13
        on right: 16
    $@3 (50)
        on left: 14
        on right: 16
    $@4 (51)
        on left: 15
        on right: 16
    Declarations (52)
        on left: 17 18
        on right: 16 18
    Declaration (53)
        on left: 20 22
        on right: 18
    $@5 (54)
        on left: 19
        on right: 20
    $@6 (55)
        on left: 21
        on right: 22
    SuiteVariables (56)
        on left: 23 25
        on right: 22 25
    $@7 (57)
        on left: 24
        on right: 25
    Instructions (58)
        on left: 26 27
        on right: 16 27
    Instruction (59)
        on left: 28 29 30 31
        on right: 27
    WhileInstruction (60)
        on left: 34
        on right: 30
    $@8 (61)
        on left: 32
        on right: 34
    $@9 (62)
        on left: 33
        on right: 34
    Print (63)
        on left: 35
        on right: 31
    IfInstruction (64)
        on left: 36 38
        on right: 29
    $@10 (65)
        on left: 37
        on right: 38
    IfPattern <nb> (66)
        on left: 40
        on right: 36 38
    $@11 (67)
        on left: 39
        on right: 40
    Comparaison (68)
        on left: 41 42 43 44 45 46 47
        on right: 34 40
    Affectation (69)
        on left: 49 50
        on right: 28
    $@12 (70)
        on left: 48
        on right: 49
    SuiteAffectations (71)
        on left: 51 53
        on right: 49 53
    $@13 (72)
        on left: 52
        on right: 53
    Expression (73)
        on left: 54 55 56 57 58 59 60 61 62 63
        on right: 41 42 43 44 45 46 47 49 50 51 53 54 55 56 57 58 59
    Value <nb> (74)
        on left: 65 67 69
        on right: 61
    $@14 (75)
        on left: 64
        on right: 65
    $@15 (76)
        on left: 66
        on right: 67
    $@16 (77)
        on left: 68
        on right: 69
    Type <typeInfos> (78)
        on left: 70 71
        on right: 6 7 10 20 22
    CoreType <typeInfos> (79)
        on left: 72
        on right: 70 71
    PointerStars <nb> (80)
        on left: 73 74
        on right: 72 74


State 0

    0 $accept: . File $end

    $default  reduce using rule 1 ($@1)

    File  go to state 1
    $@1   go to state 2


State 1

    0 $accept: File . $end

    $end  shift, and go to state 3


State 2

    2 File: $@1 . Fonctions

    tInt    shift, and go to state 4
    tConst  shift, and go to state 5

    $default  reduce using rule 3 (Fonctions)

    Fonctions     go to state 6
    Fonction      go to state 7
    FonctionMain  go to state 8
    Type          go to state 9
    CoreType      go to state 10


State 3

    0 $accept: File $end .

    $default  accept


State 4

   72 CoreType: tInt . PointerStars

    tMul  shift, and go to state 11

    $default  reduce using rule 73 (PointerStars)

    PointerStars  go to state 12


State 5

   71 Type: tConst . CoreType

    tInt  shift, and go to state 4

    CoreType  go to state 13


State 6

    2 File: $@1 Fonctions .

    $default  reduce using rule 2 (File)


State 7

    4 Fonctions: Fonction . Fonctions

    tInt    shift, and go to state 4
    tConst  shift, and go to state 5

    $default  reduce using rule 3 (Fonctions)

    Fonctions     go to state 14
    Fonction      go to state 7
    FonctionMain  go to state 8
    Type          go to state 9
    CoreType      go to state 10


State 8

    5 Fonction: FonctionMain .

    $default  reduce using rule 5 (Fonction)


State 9

    6 Fonction: Type . tVariable tPO Params tPF Body
    7 FonctionMain: Type . tMAIN tPO Params tPF Body

    tMAIN      shift, and go to state 15
    tVariable  shift, and go to state 16


State 10

   70 Type: CoreType .

    $default  reduce using rule 70 (Type)


State 11

   74 PointerStars: tMul . PointerStars

    tMul  shift, and go to state 11

    $default  reduce using rule 73 (PointerStars)

    PointerStars  go to state 17


State 12

   72 CoreType: tInt PointerStars .

    $default  reduce using rule 72 (CoreType)


State 13

   71 Type: tConst CoreType .

    $default  reduce using rule 71 (Type)


State 14

    4 Fonctions: Fonction Fonctions .

    $default  reduce using rule 4 (Fonctions)


State 15

    7 FonctionMain: Type tMAIN . tPO Params tPF Body

    tPO  shift, and go to state 18


State 16

    6 Fonction: Type tVariable . tPO Params tPF Body

    tPO  shift, and go to state 19


State 17

   74 PointerStars: tMul PointerStars .

    $default  reduce using rule 74 (PointerStars)


State 18

    7 FonctionMain: Type tMAIN tPO . Params tPF Body

    tInt    shift, and go to state 4
    tConst  shift, and go to state 5

    $default  reduce using rule 8 (Params)

    Params    go to state 20
    Param     go to state 21
    Type      go to state 22
    CoreType  go to state 10


State 19

    6 Fonction: Type tVariable tPO . Params tPF Body

    tInt    shift, and go to state 4
    tConst  shift, and go to state 5

    $default  reduce using rule 8 (Params)

    Params    go to state 23
    Param     go to state 21
    Type      go to state 22
    CoreType  go to state 10


State 20

    7 FonctionMain: Type tMAIN tPO Params . tPF Body

    tPF  shift, and go to state 24


State 21

    9 Params: Param . SuiteParams

    tVirg  shift, and go to state 25

    $default  reduce using rule 11 (SuiteParams)

    SuiteParams  go to state 26


State 22

   10 Param: Type . tVariable

    tVariable  shift, and go to state 27


State 23

    6 Fonction: Type tVariable tPO Params . tPF Body

    tPF  shift, and go to state 28


State 24

    7 FonctionMain: Type tMAIN tPO Params tPF . Body

    $default  reduce using rule 13 ($@2)

    Body  go to state 29
    $@2   go to state 30


State 25

   12 SuiteParams: tVirg . Param SuiteParams

    tInt    shift, and go to state 4
    tConst  shift, and go to state 5

    Param     go to state 31
    Type      go to state 22
    CoreType  go to state 10


State 26

    9 Params: Param SuiteParams .

    $default  reduce using rule 9 (Params)


State 27

   10 Param: Type tVariable .

    $default  reduce using rule 10 (Param)


State 28

    6 Fonction: Type tVariable tPO Params tPF . Body

    $default  reduce using rule 13 ($@2)

    Body  go to state 32
    $@2   go to state 30


State 29

    7 FonctionMain: Type tMAIN tPO Params tPF Body .

    $default  reduce using rule 7 (FonctionMain)


State 30

   16 Body: $@2 . tAO Declarations $@3 Instructions $@4 tAF

    tAO  shift, and go to state 33


State 31

   12 SuiteParams: tVirg Param . SuiteParams

    tVirg  shift, and go to state 25

    $default  reduce using rule 11 (SuiteParams)

    SuiteParams  go to state 34


State 32

    6 Fonction: Type tVariable tPO Params tPF Body .

    $default  reduce using rule 6 (Fonction)


State 33

   16 Body: $@2 tAO . Declarations $@3 Instructions $@4 tAF

    tInt    shift, and go to state 4
    tConst  shift, and go to state 5

    $default  reduce using rule 17 (Declarations)

    Declarations  go to state 35
    Declaration   go to state 36
    Type          go to state 37
    CoreType      go to state 10


State 34

   12 SuiteParams: tVirg Param SuiteParams .

    $default  reduce using rule 12 (SuiteParams)


State 35

   16 Body: $@2 tAO Declarations . $@3 Instructions $@4 tAF

    $default  reduce using rule 14 ($@3)

    $@3  go to state 38


State 36

   18 Declarations: Declaration . Declarations

    tInt    shift, and go to state 4
    tConst  shift, and go to state 5

    $default  reduce using rule 17 (Declarations)

    Declarations  go to state 39
    Declaration   go to state 36
    Type          go to state 37
    CoreType      go to state 10


State 37

   20 Declaration: Type . tVariable tPointVirg $@5
   22            | Type . tVariable $@6 SuiteVariables tPointVirg

    tVariable  shift, and go to state 40


State 38

   16 Body: $@2 tAO Declarations $@3 . Instructions $@4 tAF

    tPrintf    shift, and go to state 41
    tIf        shift, and go to state 42
    tWhile     shift, and go to state 43
    tVariable  shift, and go to state 44

    $default  reduce using rule 26 (Instructions)

    Instructions      go to state 45
    Instruction       go to state 46
    WhileInstruction  go to state 47
    Print             go to state 48
    IfInstruction     go to state 49
    IfPattern         go to state 50
    Affectation       go to state 51


State 39

   18 Declarations: Declaration Declarations .

    $default  reduce using rule 18 (Declarations)


State 40

   20 Declaration: Type tVariable . tPointVirg $@5
   22            | Type tVariable . $@6 SuiteVariables tPointVirg

    tPointVirg  shift, and go to state 52

    $default  reduce using rule 21 ($@6)

    $@6  go to state 53


State 41

   35 Print: tPrintf . tPO tVariable tPF tPointVirg

    tPO  shift, and go to state 54


State 42

   40 IfPattern: tIf . tPO Comparaison tPF $@11 Body

    tPO  shift, and go to state 55


State 43

   34 WhileInstruction: tWhile . $@8 tPO Comparaison tPF $@9 Body

    $default  reduce using rule 32 ($@8)

    $@8  go to state 56


State 44

   49 Affectation: tVariable . tEqu Expression $@12 SuiteAffectations tPointVirg
   50            | tVariable . tEqu Expression tPointVirg

    tEqu  shift, and go to state 57


State 45

   16 Body: $@2 tAO Declarations $@3 Instructions . $@4 tAF

    $default  reduce using rule 15 ($@4)

    $@4  go to state 58


State 46

   27 Instructions: Instruction . Instructions

    tPrintf    shift, and go to state 41
    tIf        shift, and go to state 42
    tWhile     shift, and go to state 43
    tVariable  shift, and go to state 44

    $default  reduce using rule 26 (Instructions)

    Instructions      go to state 59
    Instruction       go to state 46
    WhileInstruction  go to state 47
    Print             go to state 48
    IfInstruction     go to state 49
    IfPattern         go to state 50
    Affectation       go to state 51


State 47

   30 Instruction: WhileInstruction .

    $default  reduce using rule 30 (Instruction)


State 48

   31 Instruction: Print .

    $default  reduce using rule 31 (Instruction)


State 49

   29 Instruction: IfInstruction .

    $default  reduce using rule 29 (Instruction)


State 50

   36 IfInstruction: IfPattern .
   38              | IfPattern . tElse $@10 Body

    tElse  shift, and go to state 60

    $default  reduce using rule 36 (IfInstruction)


State 51

   28 Instruction: Affectation .

    $default  reduce using rule 28 (Instruction)


State 52

   20 Declaration: Type tVariable tPointVirg . $@5

    $default  reduce using rule 19 ($@5)

    $@5  go to state 61


State 53

   22 Declaration: Type tVariable $@6 . SuiteVariables tPointVirg

    tVirg  shift, and go to state 62

    SuiteVariables  go to state 63


State 54

   35 Print: tPrintf tPO . tVariable tPF tPointVirg

    tVariable  shift, and go to state 64


State 55

   40 IfPattern: tIf tPO . Comparaison tPF $@11 Body

    tMinus     shift, and go to state 65
    tMul       shift, and go to state 66
    tPO        shift, and go to state 67
    tEsper     shift, and go to state 68
    tNumber    shift, and go to state 69
    tDecimal   shift, and go to state 70
    tExpo      shift, and go to state 71
    tVariable  shift, and go to state 72

    Comparaison  go to state 73
    Expression   go to state 74
    Value        go to state 75


State 56

   34 WhileInstruction: tWhile $@8 . tPO Comparaison tPF $@9 Body

    tPO  shift, and go to state 76


State 57

   49 Affectation: tVariable tEqu . Expression $@12 SuiteAffectations tPointVirg
   50            | tVariable tEqu . Expression tPointVirg

    tMinus     shift, and go to state 65
    tMul       shift, and go to state 66
    tPO        shift, and go to state 67
    tEsper     shift, and go to state 68
    tNumber    shift, and go to state 69
    tDecimal   shift, and go to state 70
    tExpo      shift, and go to state 71
    tVariable  shift, and go to state 72

    Expression  go to state 77
    Value       go to state 75


State 58

   16 Body: $@2 tAO Declarations $@3 Instructions $@4 . tAF

    tAF  shift, and go to state 78


State 59

   27 Instructions: Instruction Instructions .

    $default  reduce using rule 27 (Instructions)


State 60

   38 IfInstruction: IfPattern tElse . $@10 Body

    $default  reduce using rule 37 ($@10)

    $@10  go to state 79


State 61

   20 Declaration: Type tVariable tPointVirg $@5 .

    $default  reduce using rule 20 (Declaration)


State 62

   23 SuiteVariables: tVirg . tVariable
   25               | tVirg . tVariable $@7 SuiteVariables

    tVariable  shift, and go to state 80


State 63

   22 Declaration: Type tVariable $@6 SuiteVariables . tPointVirg

    tPointVirg  shift, and go to state 81


State 64

   35 Print: tPrintf tPO tVariable . tPF tPointVirg

    tPF  shift, and go to state 82


State 65

   59 Expression: tMinus . Expression

    tMinus     shift, and go to state 65
    tMul       shift, and go to state 66
    tPO        shift, and go to state 67
    tEsper     shift, and go to state 68
    tNumber    shift, and go to state 69
    tDecimal   shift, and go to state 70
    tExpo      shift, and go to state 71
    tVariable  shift, and go to state 72

    Expression  go to state 83
    Value       go to state 75


State 66

   63 Expression: tMul . tVariable

    tVariable  shift, and go to state 84


State 67

   54 Expression: tPO . Expression tPF

    tMinus     shift, and go to state 65
    tMul       shift, and go to state 66
    tPO        shift, and go to state 67
    tEsper     shift, and go to state 68
    tNumber    shift, and go to state 69
    tDecimal   shift, and go to state 70
    tExpo      shift, and go to state 71
    tVariable  shift, and go to state 72

    Expression  go to state 85
    Value       go to state 75


State 68

   62 Expression: tEsper . tVariable

    tVariable  shift, and go to state 86


State 69

   65 Value: tNumber . $@14

    $default  reduce using rule 64 ($@14)

    $@14  go to state 87


State 70

   69 Value: tDecimal . $@16

    $default  reduce using rule 68 ($@16)

    $@16  go to state 88


State 71

   67 Value: tExpo . $@15

    $default  reduce using rule 66 ($@15)

    $@15  go to state 89


State 72

   60 Expression: tVariable .

    $default  reduce using rule 60 (Expression)


State 73

   40 IfPattern: tIf tPO Comparaison . tPF $@11 Body

    tPF  shift, and go to state 90


State 74

   41 Comparaison: Expression . tEQUALCOMPARISON Expression
   42            | Expression . tDIFFERENT Expression
   43            | Expression . tGREATER_THAN Expression
   44            | Expression . tLESS_THAN_OR_EQUAL_TO Expression
   45            | Expression . tLESS_THAN Expression
   46            | Expression . tGREATER_THAN_OR_EQUAL_TO Expression
   47            | Expression .
   55 Expression: Expression . tPlus Expression
   56           | Expression . tMinus Expression
   57           | Expression . tMul Expression
   58           | Expression . tDiv Expression

    tPlus                      shift, and go to state 91
    tMinus                     shift, and go to state 92
    tMul                       shift, and go to state 93
    tDiv                       shift, and go to state 94
    tLESS_THAN_OR_EQUAL_TO     shift, and go to state 95
    tLESS_THAN                 shift, and go to state 96
    tGREATER_THAN_OR_EQUAL_TO  shift, and go to state 97
    tGREATER_THAN              shift, and go to state 98
    tDIFFERENT                 shift, and go to state 99
    tEQUALCOMPARISON           shift, and go to state 100

    $default  reduce using rule 47 (Comparaison)


State 75

   61 Expression: Value .

    $default  reduce using rule 61 (Expression)


State 76

   34 WhileInstruction: tWhile $@8 tPO . Comparaison tPF $@9 Body

    tMinus     shift, and go to state 65
    tMul       shift, and go to state 66
    tPO        shift, and go to state 67
    tEsper     shift, and go to state 68
    tNumber    shift, and go to state 69
    tDecimal   shift, and go to state 70
    tExpo      shift, and go to state 71
    tVariable  shift, and go to state 72

    Comparaison  go to state 101
    Expression   go to state 74
    Value        go to state 75


State 77

   49 Affectation: tVariable tEqu Expression . $@12 SuiteAffectations tPointVirg
   50            | tVariable tEqu Expression . tPointVirg
   55 Expression: Expression . tPlus Expression
   56           | Expression . tMinus Expression
   57           | Expression . tMul Expression
   58           | Expression . tDiv Expression

    tPlus       shift, and go to state 91
    tMinus      shift, and go to state 92
    tMul        shift, and go to state 93
    tDiv        shift, and go to state 94
    tPointVirg  shift, and go to state 102

    $default  reduce using rule 48 ($@12)

    $@12  go to state 103


State 78

   16 Body: $@2 tAO Declarations $@3 Instructions $@4 tAF .

    $default  reduce using rule 16 (Body)


State 79

   38 IfInstruction: IfPattern tElse $@10 . Body

    $default  reduce using rule 13 ($@2)

    Body  go to state 104
    $@2   go to state 30


State 80

   23 SuiteVariables: tVirg tVariable .
   25               | tVirg tVariable . $@7 SuiteVariables

    tVirg     reduce using rule 24 ($@7)
    $default  reduce using rule 23 (SuiteVariables)

    $@7  go to state 105


State 81

   22 Declaration: Type tVariable $@6 SuiteVariables tPointVirg .

    $default  reduce using rule 22 (Declaration)


State 82

   35 Print: tPrintf tPO tVariable tPF . tPointVirg

    tPointVirg  shift, and go to state 106


State 83

   55 Expression: Expression . tPlus Expression
   56           | Expression . tMinus Expression
   57           | Expression . tMul Expression
   58           | Expression . tDiv Expression
   59           | tMinus Expression .

    tMul  shift, and go to state 93
    tDiv  shift, and go to state 94

    $default  reduce using rule 59 (Expression)


State 84

   63 Expression: tMul tVariable .

    $default  reduce using rule 63 (Expression)


State 85

   54 Expression: tPO Expression . tPF
   55           | Expression . tPlus Expression
   56           | Expression . tMinus Expression
   57           | Expression . tMul Expression
   58           | Expression . tDiv Expression

    tPlus   shift, and go to state 91
    tMinus  shift, and go to state 92
    tMul    shift, and go to state 93
    tDiv    shift, and go to state 94
    tPF     shift, and go to state 107


State 86

   62 Expression: tEsper tVariable .

    $default  reduce using rule 62 (Expression)


State 87

   65 Value: tNumber $@14 .

    $default  reduce using rule 65 (Value)


State 88

   69 Value: tDecimal $@16 .

    $default  reduce using rule 69 (Value)


State 89

   67 Value: tExpo $@15 .

    $default  reduce using rule 67 (Value)


State 90

   40 IfPattern: tIf tPO Comparaison tPF . $@11 Body

    $default  reduce using rule 39 ($@11)

    $@11  go to state 108


State 91

   55 Expression: Expression tPlus . Expression

    tMinus     shift, and go to state 65
    tMul       shift, and go to state 66
    tPO        shift, and go to state 67
    tEsper     shift, and go to state 68
    tNumber    shift, and go to state 69
    tDecimal   shift, and go to state 70
    tExpo      shift, and go to state 71
    tVariable  shift, and go to state 72

    Expression  go to state 109
    Value       go to state 75


State 92

   56 Expression: Expression tMinus . Expression

    tMinus     shift, and go to state 65
    tMul       shift, and go to state 66
    tPO        shift, and go to state 67
    tEsper     shift, and go to state 68
    tNumber    shift, and go to state 69
    tDecimal   shift, and go to state 70
    tExpo      shift, and go to state 71
    tVariable  shift, and go to state 72

    Expression  go to state 110
    Value       go to state 75


State 93

   57 Expression: Expression tMul . Expression

    tMinus     shift, and go to state 65
    tMul       shift, and go to state 66
    tPO        shift, and go to state 67
    tEsper     shift, and go to state 68
    tNumber    shift, and go to state 69
    tDecimal   shift, and go to state 70
    tExpo      shift, and go to state 71
    tVariable  shift, and go to state 72

    Expression  go to state 111
    Value       go to state 75


State 94

   58 Expression: Expression tDiv . Expression

    tMinus     shift, and go to state 65
    tMul       shift, and go to state 66
    tPO        shift, and go to state 67
    tEsper     shift, and go to state 68
    tNumber    shift, and go to state 69
    tDecimal   shift, and go to state 70
    tExpo      shift, and go to state 71
    tVariable  shift, and go to state 72

    Expression  go to state 112
    Value       go to state 75


State 95

   44 Comparaison: Expression tLESS_THAN_OR_EQUAL_TO . Expression

    tMinus     shift, and go to state 65
    tMul       shift, and go to state 66
    tPO        shift, and go to state 67
    tEsper     shift, and go to state 68
    tNumber    shift, and go to state 69
    tDecimal   shift, and go to state 70
    tExpo      shift, and go to state 71
    tVariable  shift, and go to state 72

    Expression  go to state 113
    Value       go to state 75


State 96

   45 Comparaison: Expression tLESS_THAN . Expression

    tMinus     shift, and go to state 65
    tMul       shift, and go to state 66
    tPO        shift, and go to state 67
    tEsper     shift, and go to state 68
    tNumber    shift, and go to state 69
    tDecimal   shift, and go to state 70
    tExpo      shift, and go to state 71
    tVariable  shift, and go to state 72

    Expression  go to state 114
    Value       go to state 75


State 97

   46 Comparaison: Expression tGREATER_THAN_OR_EQUAL_TO . Expression

    tMinus     shift, and go to state 65
    tMul       shift, and go to state 66
    tPO        shift, and go to state 67
    tEsper     shift, and go to state 68
    tNumber    shift, and go to state 69
    tDecimal   shift, and go to state 70
    tExpo      shift, and go to state 71
    tVariable  shift, and go to state 72

    Expression  go to state 115
    Value       go to state 75


State 98

   43 Comparaison: Expression tGREATER_THAN . Expression

    tMinus     shift, and go to state 65
    tMul       shift, and go to state 66
    tPO        shift, and go to state 67
    tEsper     shift, and go to state 68
    tNumber    shift, and go to state 69
    tDecimal   shift, and go to state 70
    tExpo      shift, and go to state 71
    tVariable  shift, and go to state 72

    Expression  go to state 116
    Value       go to state 75


State 99

   42 Comparaison: Expression tDIFFERENT . Expression

    tMinus     shift, and go to state 65
    tMul       shift, and go to state 66
    tPO        shift, and go to state 67
    tEsper     shift, and go to state 68
    tNumber    shift, and go to state 69
    tDecimal   shift, and go to state 70
    tExpo      shift, and go to state 71
    tVariable  shift, and go to state 72

    Expression  go to state 117
    Value       go to state 75


State 100

   41 Comparaison: Expression tEQUALCOMPARISON . Expression

    tMinus     shift, and go to state 65
    tMul       shift, and go to state 66
    tPO        shift, and go to state 67
    tEsper     shift, and go to state 68
    tNumber    shift, and go to state 69
    tDecimal   shift, and go to state 70
    tExpo      shift, and go to state 71
    tVariable  shift, and go to state 72

    Expression  go to state 118
    Value       go to state 75


State 101

   34 WhileInstruction: tWhile $@8 tPO Comparaison . tPF $@9 Body

    tPF  shift, and go to state 119


State 102

   50 Affectation: tVariable tEqu Expression tPointVirg .

    $default  reduce using rule 50 (Affectation)


State 103

   49 Affectation: tVariable tEqu Expression $@12 . SuiteAffectations tPointVirg

    tVirg  shift, and go to state 120

    SuiteAffectations  go to state 121


State 104

   38 IfInstruction: IfPattern tElse $@10 Body .

    $default  reduce using rule 38 (IfInstruction)


State 105

   25 SuiteVariables: tVirg tVariable $@7 . SuiteVariables

    tVirg  shift, and go to state 62

    SuiteVariables  go to state 122


State 106

   35 Print: tPrintf tPO tVariable tPF tPointVirg .

    $default  reduce using rule 35 (Print)


State 107

   54 Expression: tPO Expression tPF .

    $default  reduce using rule 54 (Expression)


State 108

   40 IfPattern: tIf tPO Comparaison tPF $@11 . Body

    $default  reduce using rule 13 ($@2)

    Body  go to state 123
    $@2   go to state 30


State 109

   55 Expression: Expression . tPlus Expression
   55           | Expression tPlus Expression .
   56           | Expression . tMinus Expression
   57           | Expression . tMul Expression
   58           | Expression . tDiv Expression

    tMul  shift, and go to state 93
    tDiv  shift, and go to state 94

    $default  reduce using rule 55 (Expression)


State 110

   55 Expression: Expression . tPlus Expression
   56           | Expression . tMinus Expression
   56           | Expression tMinus Expression .
   57           | Expression . tMul Expression
   58           | Expression . tDiv Expression

    tMul  shift, and go to state 93
    tDiv  shift, and go to state 94

    $default  reduce using rule 56 (Expression)


State 111

   55 Expression: Expression . tPlus Expression
   56           | Expression . tMinus Expression
   57           | Expression . tMul Expression
   57           | Expression tMul Expression .
   58           | Expression . tDiv Expression

    $default  reduce using rule 57 (Expression)


State 112

   55 Expression: Expression . tPlus Expression
   56           | Expression . tMinus Expression
   57           | Expression . tMul Expression
   58           | Expression . tDiv Expression
   58           | Expression tDiv Expression .

    $default  reduce using rule 58 (Expression)


State 113

   44 Comparaison: Expression tLESS_THAN_OR_EQUAL_TO Expression .
   55 Expression: Expression . tPlus Expression
   56           | Expression . tMinus Expression
   57           | Expression . tMul Expression
   58           | Expression . tDiv Expression

    tPlus   shift, and go to state 91
    tMinus  shift, and go to state 92
    tMul    shift, and go to state 93
    tDiv    shift, and go to state 94

    $default  reduce using rule 44 (Comparaison)


State 114

   45 Comparaison: Expression tLESS_THAN Expression .
   55 Expression: Expression . tPlus Expression
   56           | Expression . tMinus Expression
   57           | Expression . tMul Expression
   58           | Expression . tDiv Expression

    tPlus   shift, and go to state 91
    tMinus  shift, and go to state 92
    tMul    shift, and go to state 93
    tDiv    shift, and go to state 94

    $default  reduce using rule 45 (Comparaison)


State 115

   46 Comparaison: Expression tGREATER_THAN_OR_EQUAL_TO Expression .
   55 Expression: Expression . tPlus Expression
   56           | Expression . tMinus Expression
   57           | Expression . tMul Expression
   58           | Expression . tDiv Expression

    tPlus   shift, and go to state 91
    tMinus  shift, and go to state 92
    tMul    shift, and go to state 93
    tDiv    shift, and go to state 94

    $default  reduce using rule 46 (Comparaison)


State 116

   43 Comparaison: Expression tGREATER_THAN Expression .
   55 Expression: Expression . tPlus Expression
   56           | Expression . tMinus Expression
   57           | Expression . tMul Expression
   58           | Expression . tDiv Expression

    tPlus   shift, and go to state 91
    tMinus  shift, and go to state 92
    tMul    shift, and go to state 93
    tDiv    shift, and go to state 94

    $default  reduce using rule 43 (Comparaison)


State 117

   42 Comparaison: Expression tDIFFERENT Expression .
   55 Expression: Expression . tPlus Expression
   56           | Expression . tMinus Expression
   57           | Expression . tMul Expression
   58           | Expression . tDiv Expression

    tPlus   shift, and go to state 91
    tMinus  shift, and go to state 92
    tMul    shift, and go to state 93
    tDiv    shift, and go to state 94

    $default  reduce using rule 42 (Comparaison)


State 118

   41 Comparaison: Expression tEQUALCOMPARISON Expression .
   55 Expression: Expression . tPlus Expression
   56           | Expression . tMinus Expression
   57           | Expression . tMul Expression
   58           | Expression . tDiv Expression

    tPlus   shift, and go to state 91
    tMinus  shift, and go to state 92
    tMul    shift, and go to state 93
    tDiv    shift, and go to state 94

    $default  reduce using rule 41 (Comparaison)


State 119

   34 WhileInstruction: tWhile $@8 tPO Comparaison tPF . $@9 Body

    $default  reduce using rule 33 ($@9)

    $@9  go to state 124


State 120

   51 SuiteAffectations: tVirg . tVariable tEqu Expression
   53                  | tVirg . tVariable tEqu Expression $@13 SuiteAffectations

    tVariable  shift, and go to state 125


State 121

   49 Affectation: tVariable tEqu Expression $@12 SuiteAffectations . tPointVirg

    tPointVirg  shift, and go to state 126


State 122

   25 SuiteVariables: tVirg tVariable $@7 SuiteVariables .

    $default  reduce using rule 25 (SuiteVariables)


State 123

   40 IfPattern: tIf tPO Comparaison tPF $@11 Body .

    $default  reduce using rule 40 (IfPattern)


State 124

   34 WhileInstruction: tWhile $@8 tPO Comparaison tPF $@9 . Body

    $default  reduce using rule 13 ($@2)

    Body  go to state 127
    $@2   go to state 30


State 125

   51 SuiteAffectations: tVirg tVariable . tEqu Expression
   53                  | tVirg tVariable . tEqu Expression $@13 SuiteAffectations

    tEqu  shift, and go to state 128


State 126

   49 Affectation: tVariable tEqu Expression $@12 SuiteAffectations tPointVirg .

    $default  reduce using rule 49 (Affectation)


State 127

   34 WhileInstruction: tWhile $@8 tPO Comparaison tPF $@9 Body .

    $default  reduce using rule 34 (WhileInstruction)


State 128

   51 SuiteAffectations: tVirg tVariable tEqu . Expression
   53                  | tVirg tVariable tEqu . Expression $@13 SuiteAffectations
